# db-clients

./: Cargo.toml  README.md
db-client-derive-macro/: Cargo.toml
db-client-derive-macro/src/: db_def.rs  input_parser.rs  lib.rs  output_parser.rs
sqlite-client/: Cargo.toml
sqlite-client/src/: client.rs  db.rs  errors.rs  main.rs
sqlite-client/src/db/: car.rs  person.rs
