[workspace]
members = [ "db-client-derive-macro", "sqlite-client"]
resolver = "2"



[package]
name = "db-clients"
version = "0.1.0"
edition = "2021"


[workspace.dependencies]
log = "0.4.20"
thiserror = "1.0.57"



[dev-dependencies]
log = { workspace = true }
env_logger = "0.11.2"
sqlite-client = { path = "sqlite-client" }

